<resources>
    <string name="app_name">TVApp</string>
    <string name="tv_shows_most_popular">TV Shows | Most Popular</string>
    <string name="read_less">Read Less</string>
    <string name="read_more">Read More</string>
    <string name="u2022">•</string>
    <string name="website">Website</string>
    <string name="episodes">Episodes</string>
    <string name="watchlist">Watchlist</string>
    <string name="search_tv_show">Search TV Show</string>
    <string name="more_like_this">More Like This</string>
</resources>